--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -7,9 +7,12 @@
 <body>
 <nav th:replace="fragments/navbar :: myNav" />
 
-<div th:each="post : ${allPosts}">
-    <a th:href="@{'/posts/' + ${post.getId()}}"><h3 th:text="${post.getTitle()}"></h3></a>
-    <h3 th:text="${post.getId()}"></h3>
+<div th:each="user : ${allUsers}">
+    <h1 th:text="${user.getId()}"></h1>
+    <h3 th:text="${user.getEmail()}"></h3>
+    <!--<h3 th:text="${user.getPosts()}"></h3>-->
+    <h3 th:text="${user.getUsername()}"></h3>
+
 </div>
 
 
