--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -8,21 +8,26 @@
 <nav th:replace="fragments/navbar :: myNav" />
 
 
-<h1>Write something new.</h1>
-<p>Create you Honest Sports post here.</p>
+<h1>Edit your post here.</h1>
+<p>You are editing: <span th:text="${post.getTitle()}"></span> </p>
 
-<form method="post" action="/posts/create" th:object="${post}">
-    <label for="title">Title</label><input type="text" name="title" id="title"/>
-    <label for="body">Body</label><textarea name="body" id="body"/>
+<form th:action="@{'/posts/' + ${post.getId()} + '/edit'}" th:method="post" th:object="${post}">
+    <label for="title">Title</label>
+    <input type="text" name="title" id="title" th:value="${post.getTitle()}"/>
+    <br/><br/>
+    <label th:for="body">Body</label>
+    <textarea name="body" id="body" th:value="${post.getBody()}" th:text="${post.getBody()}"/>
 
+    <br/><br/>
 
-    <label for="sport">Sport
+    <label th:for="sport">Sport
 
-        <select th:field="*{sport}" name="sport" id="sport">
+        <select th:field="*{sport}">
             <option th:type="hidden" th:each="sport : ${allSports}" th:value="${sport.getId()}">
                 <span th:text="${sport.sportName}"></span>
             </option>
         </select>
+
 
     </label>
 
