--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -7,9 +7,11 @@
 <body>
 <nav th:replace="fragments/navbar :: myNav" />
 
+<h6>All Posts</h6>
+
 <div th:each="post : ${allPosts}">
     <a th:href="@{'/posts/' + ${post.getId()}}"><h3 th:text="${post.getTitle()}"></h3></a>
-    <h3 th:text="${post.getId()}"></h3>
+    <h6><span th:text="${post.getSport().getSportName()}"></span> (<span th:text="${post.getTeam().getTeamName()}"></span>)</h6>
 </div>
 
 
