changes to navbar, started foundation

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,8 +7,8 @@
     <div th:fragment="head(title)">
         <meta charset="UTF-8" />
         <title th:text="${title}"></title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  />
-        <link rel="stylesheet" href="/css/main.css" />
+        <link rel="stylesheet" href="../../static/css/foundation.css" th:href="@{/css/foundation.css}"/>
+        <link rel="stylesheet" href="../../static/css/app.css" th:href="@{/css/app.css}"/>
     </div>
 
 </description>
