--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head></head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="myNav">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
+<nav th:fragment="myNav" class="n">
+    <div>
+        <ul class="vertical medium-horizontal menu">
+            <li>
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                Welcome, User!
+                <!--Welcome, <span th:text="${#authentication.principal.username}"/>-->
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-            <li>
-                <a href="/login" class="btn btn-success">Login</a>
-            </li>
-            <li>
-                <form>
-                    <button class="btn btn-danger">Logout</button>
-                </form>
-            </li>
+
+            <!--Logged in-->
+
+            <div sec:authorize="isAuthenticated()">
+                <li>
+                    <form th:action="@{/posts/create}" th:method="post">
+                        <button style="margin-top: 8px">Create</button>
+                    </form>
+                </li>
+                <li>
+                    <form th:action="@{/logout}" th:method="post">
+                        <button style="margin-top: 8px">Logout</button>
+                    </form>
+                </li>
+                <li>
+                    <form action="/posts" th:method="post">
+                        <button style="margin-top: 8px">Browse</button>
+                    </form>
+                </li>
+            </div>
+
+            <!--Logged out-->
+
+            <div sec:authorize="isAnonymous()">
+                <li>
+                    <form th:action="@{/sign-up}" th:method="post">
+                        <button style="margin-top: 8px">Sign Up</button>
+                    </form>
+                </li>
+                <li>
+                    <form th:action="@{/login}" th:method="post">
+                        <button style="margin-top: 8px">Login</button>
+                    </form>
+                </li>
+                <li>
+                    <form action="/posts" th:method="post">
+                        <button style="margin-top: 8px">Browse</button>
+                    </form>
+                </li>
+            </div>
+
         </ul>
     </div>
 </nav>
