--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments/header :: head">
     <meta charset="UTF-8" />
     <title>Home</title>
@@ -13,8 +14,15 @@
 <!--<h3><span th:text="${post}"></span></h3>-->
 <p>Team:  <span th:text="${post.team.getTeamName()}"></span></p>
 <p>Sport:  <span th:text="${post.sport.getSportName()}"></span></p>
+<p>Author:  <span th:text="${post.getAuthor().getUsername()}"></span></p>
+
+
+<div sec:authorize="isAuthenticated()">
 <a th:href="@{'/posts/' + ${post.getId()} + '/edit'}">Edit</a>
+
+
 <a th:href="@{'/posts/' + ${post.getId()} + '/delete-prompt'}">Delete</a>
+</div>
 
 
 
