--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -5,39 +5,43 @@
     <title>Home</title>
 </head>
 <body>
-<nav th:replace="fragments/navbar :: myNav" />
+<nav  class="uk-navbar-container" th:replace="fragments/navbar :: myNav" />
 
+<div class="center-wrapper">
+    <h1>Write something new.</h1>
+    <p>Create you Sports post here.</p>
 
-<h1>Write something new.</h1>
-<p>Create you Honest Sports post here.</p>
+    <form method="post" th:action="@{/posts/create}" th:object="${post}">
+        <label for="title">Title</label><input type="text" th:field="*{title}" name="title" id="title"/>
+        <label for="body">Body</label><textarea th:field="*{body}" name="body" id="body"/>
 
-<form method="post" th:action="@{/posts/create}" th:object="${post}">
-    <label for="title">Title</label><input type="text" th:field="*{title}" name="title" id="title"/>
-    <label for="body">Body</label><textarea th:field="*{body}" name="body" id="body"/>
+        <div class="select is-rounded">
+            <label for="sport">Sport
 
+                <select th:field="*{sport}" name="sport" id="sport">
+                    <option th:type="hidden" th:each="sport : ${allSports}" th:value="${sport.getId()}">
+                        <span th:text="${sport.sportName}"></span>
+                    </option>
+                </select>
 
-    <label for="sport">Sport
+            </label>
+        </div>
+        <div class="select is-rounded">
 
-        <select th:field="*{sport}" name="sport" id="sport">
-            <option th:type="hidden" th:each="sport : ${allSports}" th:value="${sport.getId()}">
-                <span th:text="${sport.sportName}"></span>
-            </option>
-        </select>
+            <label for="team">Team
 
-    </label>
+                <select th:field="*{team}" name="team" id="team">
+                    <option th:type="hidden" th:each="team : ${allTeams}" th:value="${team.getId()}">
+                        <span th:text="${team.teamName}"></span>
+                    </option>
+                </select>
 
-    <label for="team">Team
+            </label>
+        </div>
 
-        <select th:field="*{team}" name="team" id="team">
-            <option th:type="hidden" th:each="team : ${allTeams}" th:value="${team.getId()}">
-                <span th:text="${team.teamName}"></span>
-            </option>
-        </select>
-
-    </label>
-
-    <button>Submit</button>
-</form>
+        <button>Submit</button>
+    </form>
+</div>
 
 
 <nav th:replace="fragments/footer :: footer" />
