--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="fragments/header :: head">
     <meta charset="UTF-8" />
     <title>Sign up</title>
 </head>
 <body>
-<h1>Create an account</h1>
-<form th:action="@{/sign-up}" method="POST" th:object="${user}">
-    <label for="username">Username</label>
-    <input id="username" th:field="*{username}" />
+<div class="center-wrapper">
+    <h1>Create an account</h1>
+    <form class="white-text login-form" th:action="@{/sign-up}" method="POST" th:object="${user}">
+        <label for="username">Username</label>
+        <input id="username" th:field="*{username}" />
 
-    <label for="email">Email</label>
-    <input id="email" th:field="*{email}" />
+        <label for="email">Email</label>
+        <input id="email" th:field="*{email}" />
 
-    <label for="password">Password</label>
-    <input id="password" type="password" th:field="*{password}" />
+        <label for="password">Password</label>
+        <input id="password" type="password" th:field="*{password}" />
 
-    <input value="Sign me up!" type="submit" />
-</form>
+        <input value="Sign me up!" type="submit" />
+    </form>
+</div>
+<nav th:replace="fragments/footer :: footer" />
 </body>
 </html>
